--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/download.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -18,7 +18,7 @@
 	<link href="css/sb-admin-2.min.css" rel="stylesheet"/>
 	<link href="css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="css/fontawesome.min.css" rel="stylesheet"/>
-    <title>React App</title>
+    <title>Evote Admin</title>
   </head>
   <body class='animated--grow-in' >
     <noscript>You need to enable JavaScript to run this app.</noscript>
